# image2ct

./: .gitignore  CMakeLists.txt  Main.qml  README.md  helper.h  main.cpp
